# quick_server

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  mypy.ini  protocol.md  pyproject.toml  quick_server.py  readme.md  setup.cfg  setup.py  worker.js
.github/workflows/: app.yaml
example/: example.py  example2.py  index.html  test.upload
quick_server/: __init__.py  __main__.py  quick_server.py  worker.js  worker.legacy.js  worker_request.py
sh/: findpy.sh
src/quick_server/: __init__.py  __main__.py  quick_server.py  worker.js  worker.legacy.js  worker_request.py
test/: cov.py  coverage.py  run.py
