[project]
    name = "quick_server"
    description = "QuickServer is a quick to use and easy to set up server implementation."
    readme = "README.rst"
    version = "0.9.2"
    authors = [
        {name = "Josua Krause", email = "josua.krause@gmail.com"},
    ]
    keywords = [
        "server",
        "REST",
        "file",
        "quick",
        "easy",
    ]
    license = {file = "LICENSE"}
    requires-python = ">=3.10"
    classifiers = [
        "Development Status :: 4 - Beta",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
    ]

[project.urls]
    repository = "https://github.com/JosuaKrause/quick_server"

[build-system]
    requires = ["setuptools>=61.2"]
    build-backend = "setuptools.build_meta"
    include_package_data = true
    package_dir = [
        "=src",
    ]
    packages = {find = ""}
    install_requires = "pyreadline; platform_system==\"Windows\""

[tool.setuptools.packages.find]
    where = ["src"]

[tool.isort]
    extend_skip = [".json", ".md"]
    profile = "black"
    include_trailing_comma = true
    line_length = 79
    force_alphabetical_sort_within_sections = true
    skip_glob = []
    multi_line_output = 3
    lines_after_imports = 2

[tool.darglint]
    docstring_style = "google"
    enable_disabled = "DAR104"
    strictness = "short"

[tool.pylint.main]
    load-plugins = [
        "pylint.extensions.typing",
        "pylint.extensions.docparams",
        "pylint.extensions.docstyle",
    ]

[tool.pylint.basic]
    good-names = [
        "_",
        "a",
        "ax",
        "b",
        "c",
        "ci",
        "cm",
        "db",
        "df",
        "e",
        "el",
        "f",
        "fn",
        "fn",
        "fp",
        "fs",
        "ft",
        "gc",
        "io",
        "ip",
        "ix",
        "jx",
        "k",
        "le",
        "lr",
        "m",
        "ms",
        "n",
        "nl",
        "op",
        "p",
        "pf",
        "q",
        "qa",
        "r",
        "s",
        "t",
        "th",
        "tn",
        "tp",
        "tz",
        "v",
        "w",
        "ws",
        "x",
        "x1",
        "x2",
        "y",
        "y1",
        "y2",
    ]
    bad-names = [
        "i",
        "j",
    ]

[tool.pylint.messages_control]
    disable = [
        "bad-docstring-quotes",
        "duplicate-code",
        "docstring-first-line-empty",
        "fixme",
        "global-statement",
        "too-many-arguments",
        "too-many-branches",
        "too-many-instance-attributes",
        "too-many-lines",
        "too-many-locals",
        "too-many-public-methods",
        "too-many-return-statements",
        "too-many-statements",
        "unnecessary-ellipsis",
    ]
    const-rgx = '^[_A-Z]'

[tool.pylint.variables]
    init-import = "yes"

[tool.pylint.imports]
    allow-wildcard-with-all = "yes"

[tool.pylint.typecheck]
    generated-members = []

[tool.pytest.ini_options]
    filterwarnings = [
        "error",
        "ignore::DeprecationWarning",
        "ignore::RuntimeWarning",
        "ignore::ImportWarning",
    ]

[tool.coverage.run]
    branch = true
    omit = [
        "*/__init__*",
        "*/sitecustomize*",
        "*/test/*",
    ]

[tool.coverage.report]
    exclude_lines = [
        "if TYPE_CHECKING:",
        "raise NotImplementedError()",
    ]

[tool.coverage.html]
    directory = "coverage/html_report"

[tool.mypy]
    ignore_missing_imports = false
    check_untyped_defs = true
    disallow_incomplete_defs = true
    disallow_untyped_defs = true
    plugins = []
    warn_no_return = true
    warn_unused_ignores = true
    follow_imports = "normal"
    exclude = ["build/"]
