[metadata]
name = quick_server
version = attr: quick_server.quick_server.__version__
description = QuickServer is a quick to use and easy to set up server implementation.
long_description = file: README.rst
url = https://github.com/JosuaKrause/quick_server
author = Josua Krause
author_email = josua.krause@gmail.com
keywords = server REST file quick easy
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.10,

[options]
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.10
install_requires =
    pyreadline; platform_system=="Windows"

[options.packages.find]
    where=src

[bdist_wheel]
universal = 1

[darglint]
docstring_style = google
enable_disabled = DAR104
strictness = short
